deployments/traefik-dashboard/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  # In the default Helm chart values 
  #   - web is set to 8000 and exposed as 80
  #   - websecure is set to 8443 and expoed as 8443
  # Therefore we see only the internal ports on the traefik dashboard
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.hvo.lan`) # && PathPrefix(`/traefik`)
      kind: Rule
      # middlewares:
      #   - name: strip-traefik
      services:
        - name: api@internal
          kind: TraefikService
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: strip-traefik
#   namespace: default
# spec:
#   stripPrefix:
#     prefixes:
#       - "/traefik"
